<?xml version="1.0" encoding="utf-8"?>
<!--     Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstructionsFragment">


    <TextView
        android:id="@+id/instructions_header_text"
        style="@style/WelcomeScreenTitleStyle"
        android:text="@string/instructions_label" />

    <TextView
        android:id="@+id/instructions_text"
        style="@style/WelcomeScreenSubtitleStyle"
        android:text="@string/instructions_text" />

    <Button
        android:id="@+id/inventory_button"
        style="@style/WideButtonStyle"
        android:text="@string/inventory_button_label" />
</LinearLayout>

