<?xml version="1.0" encoding="utf-8"?><!--     Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeFragment"
            type="com.example.android.shoebox.WelcomeFragment" />
    </data>

    <LinearLayout
        android:id="@+id/welcome_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">


        <TextView
            android:id="@+id/welcome_screen_title_text"
            style="@style/WelcomeScreenTitleStyle"
            android:text="@string/welcome_screen_greeting" />

        <ImageView
            android:id="@+id/welcome_screen_shoes_image"
            style="@style/WelcomeScreenShoeImageStyle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcome_screen_subtitle_text"
            style="@style/WelcomeScreenSubtitleStyle"
            android:text="@string/welcome_screen_subtitle" />

        <Button
            android:id="@+id/welcome_screen_button"
            style="@style/WideButtonStyle"
            android:text="@string/welcome_screen_button_label"
            android:onClick="@{() -> welcomeFragment.onInstructionsButtonClicked()}"/>
    </LinearLayout>

</layout>